# MCHand

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  left_faces.h  left_faces.txt  main.cpp  right_faces.txt
UEHandDemo/: .ignore  Makefile  UEHandDemo.uproject
UEHandDemo/Config/: DefaultEngine.ini  DefaultGame.ini
UEHandDemo/Content/: Camera.uasset  MyMap.umap  MyMap_HLOD0_Instancing.uasset  NewMap_HLOD0_Instancing.uasset
UEHandDemo/Content/__ExternalActors__/MyMap/0/AB/: OCF4KB8EVALTQ8WW1X6JQC.uasset
UEHandDemo/Content/__ExternalActors__/MyMap/0/MA/: DJ4THU8KYM13CASF807TUN.uasset
UEHandDemo/Content/__ExternalActors__/MyMap/1/BU/: A9P6Y5OFKW4J524Z4LW334.uasset
UEHandDemo/Content/__ExternalActors__/MyMap/1/YI/: 28R8QA4RW798N6EQNUEZ7U.uasset
UEHandDemo/Content/__ExternalActors__/MyMap/2/6L/: AYWRT43I8OES6QOT2LYJL8.uasset
UEHandDemo/Source/: UEHandDemo.Target.cs  UEHandDemoEditor.Target.cs
UEHandDemo/Source/UEHandDemo/: HandManager.cpp  HandManager.h  HandMesh.cpp  HandMesh.h  MyCamrta.cpp  MyCamrta.h  UEHandDemo.Build.cs  UEHandDemo.cpp
UnityHandDemo/: Assembly-CSharp.csproj  UnityHandDemo.sln
UnityHandDemo/Assets/: MCHand.cs  MakeMesh.cs  pccamera.cs
UnityHandDemo/Assets/Scenes/: SampleScene.unity
UnityHandDemo/ProjectSettings/: ProjectSettings.asset
UnityHandDemo/UserSettings/Layouts/: default-2022.dwlt
include/: Engine.hpp  ExternalCall.h  InputOutput.hpp  MANO.hpp  MCHand.hpp  PostPrecess.hpp  PreProcess.hpp  right_faces.h
showcase/: UnrealDemo.mkv
src/: Engine.cpp  ExternalCall.cpp  InputOutput.cpp  MANO.cpp  MCHand.cpp  PostPrecess.cpp  PreProcess.cpp
(+63 files in other folders)
